--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,12 @@ spring.jpa.hibernate.ddl-auto=update
 jwt.secret.key=thisisthesecretkeyievercreatedinmydevcareer
 
 server.servlet.context-path=/api/v1.0
+
+spring.mail.host=smtp-relay.brevo.com
+spring.mail.port=587
+spring.mail.username=96b160001@smtp-brevo.com
+spring.mail.password=sqgYmbOpLRG6Qav9
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.from=harshbisht113322@gmail.com
